# langgraph-whatsapp-agent

./: .env.example  .gitignore  LICENSE  README.md  README_TESTING.md  langgraph.json  pyproject.toml
scripts/: manual_test.py  test_runner.py
src/agents/base/: graph.py  graph_simple.py  prompt.py
src/langgraph_whatsapp/: agent.py  auth.py  channel.py  config.py  server.py
tests/: test_agent_direct.py  test_whatsapp_agent.py  test_whatsapp_integration.py
